<resources>
    <string name="app_name">Driver</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up_for_an_account">Sign up for an account</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="contact">Contact:</string>
    <string name="from">From:</string>
    <string name="los_vegas">Los Vegas:</string>
    <string name="to">To:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="consumer"><u>Consumer</u></string>
    <string name="name">Name:</string>
    <string name="phone_card_view">Phone:</string>
    <string name="address_card_view">Address:</string>
    <string name="restaurant">Restaurant</string>
    <string name="take_order">Take Order</string>
    <string name="total">Total:</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="get_direction"><u><b>Get Direction</b></u></string>

</resources>
