<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background"
    tools:context=".Activities.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.85"
        android:background="@drawable/gradient_default"
        android:gravity="center"
        android:padding="16dp">


        <Button
            android:id="@+id/register_sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_linear_layout_confirm_password"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/register_linear_layout_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_linear_layout_first_name"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_person_outline_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/hintAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_linear_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_linear_layout_last_name"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic__ionicons_svg_md_mail" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/hintAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-10dp"
                    android:backgroundTint="@color/white"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_linear_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_linear_layout_email"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_lock_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/hintAppearance"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_linear_layout_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_linear_layout_password"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_lock_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/hintAppearance"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register_linear_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_person_outline_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterTextAppearance="@style/hintAppearance"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/hintAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/register_linear_layout_sign_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/register_sign_up_button"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/register_already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/register_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textColor="#0000ff"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/register_linear_layout_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_linear_layout_username"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="25dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_person_outline_black_24dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorEnabled="true"
                app:hintTextAppearance="@style/hintAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>